--- a/WebAppBarang/Web.config
+++ b/WebAppBarang/Web.config
@@ -9,6 +9,6 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="myConnectionString" connectionString="Server=DESKTOP-5CL97R7\SQLEXPRESS; Database=DB_PEMBELIAN; Trusted_Connection=true;" providerName="System.Data.SqlClient"/>
+    <add name="myConnectionString" connectionString="Server=.\SQLEXPRESS; Database=DB_BARANG; Trusted_Connection=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
